
Changes in Version 0.9-20

  o GUI overhaul! Menus, new tools, new infrastructure, etc.

  o note that playwith() arguments and playwith.options have changed.

  o latticeStyleGUI(), a stand-alone function to edit the lattice theme.

  o latticist supports a depth variable (3D) and a color covariate.
    Also produces better plots with multiple categoricals.

Changes in Version 0.9-11

  o latticist uses hexbinplot, and many other changes.

  o playwith() now returns the playState object, not the plot result.

  o revised and expanded all examples in help("playwith").

  o common errors in playwith and latticist are caught and shown in
    a dialog box (unless playwith.options(catch.errors = FALSE)).
    On Linux this avoids killing R with "stack smashing detected".

  o call history (back/forward buttons) works correctly.

  o improved local cacheing of objects appearing in the plot call.
    now stores local functions as well as objects, and works better.

  o re-used playwith windows are resized to account for toolbars etc.

  o grob inspector tool allows removing grobs (but note bug in 'grid').

  o fixed zooming with lattice categorical scales (again).

Changes in Version 0.9-10

  o grob inspector tool (currently only shows str() of grobs).

  o moved marginals() and c.trellis() into latticeExtra package.

  o plot settings dialog now does not fail for lattice plots
    where scales="free".

  o lattice theme selector now includes an option for custom.theme()
    from latticeExtra.

Changes in Version 0.9-9

  o fix bug when tooltips are turned on: this runs the GTK Main Loop,
    and sometimes when the window was closed it was not stopped,
    freezing the R terminal.

  o fix bug in parameter slider ("Invalid property value").

  o make sliders and scrollbars update continuously (but constrained
    by plot redrawing), rather than only on mouse button release.

Changes in Version 0.9-8

  o compatability with older versions of RGtk2.
