@@ -314,10 +314,12 @@ latticeSettingsGUI <- function(playState)
     visible(lay) <- TRUE
 
     svalue(tabs) <- 1
+    showingPreview <- FALSE
 
     ok_handler <- function(h, ...)
     {
         playReplot(playState)
+        showingPreview <<- TRUE
         if (h$action == "apply") return()
         dispose(h$obj)
         playState$win$present()
@@ -332,6 +334,8 @@ latticeSettingsGUI <- function(playState)
     canbutt <- gbutton("Cancel", container=buttgroup,
                        handler = function(h, ...) {
                            playState$call <- origCall
+                           if (showingPreview)
+                               playReplot(playState)
                            dispose(h$obj)
                        })
     size(okbutt) <- size(prebutt) <- size(canbutt) <- c(80, 30)
@@ -542,10 +546,12 @@ basePlotSettingsGUI <- function(playState)
     visible(lay) <- TRUE
 
     svalue(tabs) <- 1
+    showingPreview <- FALSE
 
     ok_handler <- function(h, ...)
     {
         playReplot(playState)
+        showingPreview <<- TRUE
         if (h$action == "apply") return()
         dispose(h$obj)
         playState$win$present()
@@ -560,6 +566,8 @@ basePlotSettingsGUI <- function(playState)
     canbutt <- gbutton("Cancel", container=buttgroup,
                        handler=function(h, ...) {
                            playState$call <- origCall
+                           if (showingPreview)
+                               playReplot(playState)
                            dispose(h$obj)
                        })
     size(okbutt) <- size(prebutt) <- size(canbutt) <- c(80, 30)
